src/objects/a__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPhoneTest__c</fullName>
        <formula>BPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPhoneTest</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPhone__c</fullName>
        <formula>b__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Decimal__c</fullName>
        <label>NS Decimal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>b__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>b</label>
        <referenceTo>b__c</referenceTo>
        <relationshipLabel>as</relationshipLabel>
        <relationshipName>as</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hhhhhh__c</fullName>
        <externalId>true</externalId>
        <label>hhhhhh</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nnnn__c</fullName>
        <externalId>true</externalId>
        <label>nnnn</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>p1__c</fullName>
        <label>p1</label>
        <picklist>
            <picklistValues>
                <fullName>one</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>four</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>rrrrrr__c</fullName>
        <externalId>true</externalId>
        <label>rrrrrr</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.FirstName</field>
                <operation>equals</operation>
                <value>Ruslan</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>as</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>a</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>aaaa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>as</pluralLabel>
    <recordTypes>
        <fullName>aaa</fullName>
        <active>true</active>
        <label>aaa</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>